--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -1,49 +1,49 @@
 name: CI github actions
 on:
-  push:
+  push: #Workflow runs are triggered on every push
 
 jobs:  
   build-and-test:
-    name: github-actions_build-and-test
-    runs-on: windows-latest #ubuntu-latest #windows-latest
+    name: github-actions_build-and-test #Name of test
+    runs-on: windows-latest #ubuntu-latest #Setting operating system
     
     steps:
-    - name: step#1 Checkout
+    - name: 1. Checkout github actions
       uses: actions/checkout@v2
     
-    - name: step#2 Setup dotnet
+    - name: 2. Setup dotnet
       uses: actions/setup-dotnet@v1
       with:
-       dotnet-version: '3.1.100' #'2.2.108' #'3.1.100'
-    - name: step#3 Build with dotnet
+       dotnet-version: '3.1.100' #'2.2.108'
+    
+    - name: 3. Build dotnet
       run: dotnet build ./Swapify.sln #--configuration Release
       
-    - name: step#4 Run tests
+    - name: 4. Run BE tests
       run: dotnet test ./Tests/BackendTest/BackendTest.csproj #dotnet test --verbosity normal
     
-    - name: step#5 Setup node
+    - name: 5. Setup node
       uses: actions/setup-node@v1
       with:
         node-version: 12.11.1
-    - name: step#6 npm install
+    
+    - name: 6. npm install
       run: |
         cd WebApp
         npm install
 
-
-
-#    - name: step#7 npm test
+#    - name: 7. npm test
 #      run: |
 #        cd WebApp
 #        npm test
         
-    - name: step#8 gui tests
-      run: |
-        dotnet WebAPI/bin/Debug/netcoreapp2.0/WebAPI.dll        
-        cd ../../../../WebApp
-        npm start
-        cd testsGUI
-        npm install
-        npx codeceptjs run
-    env:
-        ASPNETCORE_ENVIRONMENT: Development
+#    - name: 8. gui tests
+#      run: |
+#        dotnet WebAPI/bin/Debug/netcoreapp2.0/WebAPI.dll        
+#        cd ../../../../WebApp
+#        npm start
+#        cd testsGUI
+#        npm install
+#        npx codeceptjs run
+#    env:
+#        ASPNETCORE_ENVIRONMENT: Development
