--- a/nginx.conf
+++ b/nginx.conf
@@ -15,13 +15,13 @@ http {
 
   server {
     listen 80;
-    server_name http://18.184.180.36/;
-    return 301 http://http://18.184.180.36/$request_uri;
+    server_name http://18.193.17.141/;
+    return 301 http://18.193.17.141/$request_uri;
          }
 
    server {
     listen 443 ssl;
-    server_name https://18.184.180.36/;
+    server_name https://18.193.17.141/;
     
     # ssl_certificate /ssl/<your_ssl_cert.pem>;
     # ssl_certificate_key /ssl/<your_ssl_private_key.key>;
