--- a/WebApp/package.json
+++ b/WebApp/package.json
@@ -45,14 +45,15 @@
     "object-assign": "4.1.0",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
+    "react-google-recaptcha": "^2.1.0",
     "react-onclickoutside": "^6.7.1",
     "react-pdf": "^4.1.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-router-redux": "5.0.0-alpha.6",
     "react-slideshow-image": "^1.2.0",
-    "react-swipeable-views": "^0.13.8",
     "react-spinners": "^0.8.0",
+    "react-swipeable-views": "^0.13.8",
     "redux": "^4.0.0",
     "redux-auth-wrapper": "^2.0.3",
     "redux-persist": "^6.0.0-pre2.1",
