--- a/Backend/Backend.csproj
+++ b/Backend/Backend.csproj
@@ -18,6 +18,7 @@
     <PackageReference Include="Mongo2Go" Version="2.2.8" />
     <PackageReference Include="MongoDB.Driver" Version="2.9.3" />
     <PackageReference Include="Mustache" Version="1.0.1" />
+    <PackageReference Include="Novell.Directory.Ldap.NETStandard" Version="3.6.0" />
     <PackageReference Include="RestSharp.NetCore" Version="105.2.4-rc4-24214-01" />
     <PackageReference Include="SonarAnalyzer.CSharp" Version="7.10.0.7896">
       <PrivateAssets>all</PrivateAssets>
